--- a/lab4/Lab4.ipynb
+++ b/lab4/Lab4.ipynb
@@ -326,7 +326,8 @@
     "    print('Es/N0:'+str(SNR)+'   BLER:'+str(BLER) +'   BER:'+str(BER))\n",
     "    l_BLER.append(BLER)\n",
     "    l_BER.append(BER)\n",
-    "np.save('BLER',np.array(l_BLER))"
+    "np.save('BLER',np.array(l_BLER))\n",
+    "np.save('BER',np.array(l_BER))"
    ]
   },
   {
