--- a/lab4/Lab4.ipynb
+++ b/lab4/Lab4.ipynb
@@ -115,7 +115,7 @@
     "        plt.legend(loc='lower left',ncol = 1)\n",
     "        plt.show()\n",
     "    if(l_BER):\n",
-    "        plt.plot(Esdb , l_BER , 'bo-', linewidth=1, alpha=0.6,label='bit error rate')\n",
+    "        plt.plot(Esdb , l_BER , 'bo-', linewidth=1, alpha=0.6,label='Bit error rate')\n",
     "        plt.title('Bit Error Rate vs Es/N0 ')\n",
     "        plt.yscale('log')\n",
     "        plt.xlabel('Es/N0')\n",
